# OpenHiCKKS

./: .gitignore  CMakeLists.txt  README_测试说明.md  readme-zh.md  readme.md  run_benchmark_multiscale.sh
include/: ckks_crypto.h  ckks_encode.h  ckks_polynomial.h
src/: ckks_crypto.c  ckks_encode.c  ckks_polynomial.c
test/: test_benchmark.c  test_main.c
